--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,4 +21,5 @@ jobs:
       
       - uses: codecov/codecov-action@v2
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: build/reports/jacoco/test/jacocoTestReport.xml
